--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,4 @@
-- Replace npm with yarn
+- [x] Replace npm with yarn
+- use Vite instead of babel
 - Implement as GitHub CLI Extension
+- Fetch the PRs for a feature from a Project Managements system like Jira or Clickup
