--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 - [x] Replace npm with yarn
-- Show PR as dependency (if one PR want to be merged into another one)
-- Draft status
+- [x] Show PR as dependency (if one PR want to be merged into another one)
+- [x] Draft status
 - use Vite instead of babel
 - Implement as GitHub CLI Extension
 - Fetch the PRs for a feature from a Project Managements system like Jira or Clickup
