--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,11 @@
 - [x] Replace npm with yarn
 - [x] Show PR as dependency (if one PR want to be merged into another one)
 - [x] Draft status
-- use Vite instead of babel
+- [x] use Vite instead of babel
+- Reactive fetch (start render from the first PR response)
+- Readme
+- List all my PRs/assigned to me and ask me where to add them
 - Implement as GitHub CLI Extension
 - Fetch the PRs for a feature from a Project Managements system like Jira or Clickup
 - remote shared status file
-- Reactive fetch (start render from the first PR response)
+- Another project? Track the statuses of the PR's waiting to me on Open Source
