Refactor PR health tracking with reactive store pattern
- Replace controller with reactive store using EventEmitter
- Implement incremental state updates during PR health check
- Enhance App component to use new store-based state management
- Remove deprecated PR health controller
- Add support for progressive rendering of PR health results

--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
 - [x] Show PR as dependency (if one PR want to be merged into another one)
 - [x] Draft status
 - [x] use Vite instead of babel
-- Reactive fetch (start render from the first PR response)
+- [x] Reactive fetch (start render from the first PR response)
 - Readme
 - List all my PRs/assigned to me and ask me where to add them
 - Implement as GitHub CLI Extension
