--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,8 @@
 - [x] Draft status
 - [x] use Vite instead of babel
 - [x] Reactive fetch (start render from the first PR response)
-- Readme
-- List all my PRs/assigned to me and ask me where to add them
+- [x] Readme
+- [x] List all my PRs/assigned to me and ask me where to add them
 - Implement as GitHub CLI Extension
 - Fetch the PRs for a feature from a Project Managements system like Jira or Clickup
 - remote shared status file
-- Another project? Track the statuses of the PR's waiting to me on Open Source
